[project]
name = "autodata"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "colorama>=0.4.6",
    "openai>=1.101.0",
    "google-genai>=1.31.0",
]
